--- a/pom.xml
+++ b/pom.xml
@@ -123,6 +123,30 @@
             <version>${maven.buildhelper.version}</version>
             <executions>
                <execution>
+                  <id>regex-properties</id>
+                  <goals>
+                     <goal>regex-properties</goal>
+                  </goals>
+                  <configuration>
+                     <regexPropertySettings>
+                        <regexPropertySetting>
+                           <name>rm.module.repo.version.min</name>
+                           <value>${alfresco.version}</value>
+                           <regex>(\d+)\.(\d+).*</regex>
+                           <replacement>$1.$2</replacement>
+                           <failIfNoMatch>false</failIfNoMatch>
+                        </regexPropertySetting>
+                        <regexPropertySetting>
+                           <name>rm.module.version</name>
+                           <value>${alfresco.rm.version}</value>
+                           <regex>(\d+)\.(\d+).*</regex>
+                           <replacement>$1.$2</replacement>
+                           <failIfNoMatch>false</failIfNoMatch>
+                        </regexPropertySetting>
+                     </regexPropertySettings>
+                  </configuration>
+               </execution>
+               <execution>
                   <id>add-test-source</id>
                   <goals>
                      <goal>add-test-source</goal>
