--- a/rm-community/rm-community-share/pom.xml
+++ b/rm-community/rm-community-share/pom.xml
@@ -59,7 +59,7 @@
                      <goal>run</goal>
                   </goals>
                   <configuration>
-                     <tasks>
+                     <target>
                         <move todir="${project.build.directory}/${project.build.finalName}/config/alfresco">
                            <fileset dir="${project.build.outputDirectory}/alfresco"/>
                         </move>
@@ -76,7 +76,7 @@
                            todir="${project.build.directory}/${project.build.finalName}"/>
                         <move file="${project.build.directory}/${project.build.finalName}/config/alfresco/module/org_alfresco_module_rm_share/module.properties"
                            todir="${project.build.directory}/${project.build.finalName}"/>
-                     </tasks>
+                     </target>
                   </configuration>
                </execution>
             </executions>
